--- a/.classpath
+++ b/.classpath
@@ -5,5 +5,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Processing"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Minim"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/TUIO"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
